--- a/base/templates/base/homepage.html
+++ b/base/templates/base/homepage.html
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h1>To do list</h1>
-<div>
-    {% for task in object_list %}
-        <p>{{ task.description }}</p>
-    {% endfor %}
-</div>
-</body>
-</html>
+{% extends "base/base.html" %}
+
+
+{% block body %}
+
+
+{% endblock body %}
