--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>To do list</title>
-
-<body>
+</head>
+<body style="background: cadetblue">
     <h1>To do list</h1>
+
+    {% block navbar %}
+      <a href="{% url 'categories' %}">Categories</a><br>
+    {% endblock navbar %}
+
 
     {% block form %}
     {% endblock form %}
 
     {% block body %}
-
-
-
     {% endblock body %}
 </body>
 </html>
