update dead_line and more

--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+{#    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">#}
     <title>To do list</title>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
@@ -12,5 +13,4 @@
     {% block form %}
     {% endblock form %}
 
-</body>
 </html>
