deleted line in base.html, fixed link to categories and back

--- a/base/templates/base/categories.html
+++ b/base/templates/base/categories.html
@@ -1,7 +1,7 @@
-{% include "base/../base.html" %}
+{% include "base/base.html" %}
 
 {% block body %}
-  <a href="{% url "homepage" %}">Homepage</a>
+  <a href="{% url "tasks" %}">Homepage</a>
     <h3>CATEGORY:</h3>
 
     <h4>Family ({{ family.count }})</h4>
