--- a/base/templates/base/task_confirm_delete.html
+++ b/base/templates/base/task_confirm_delete.html
@@ -4,7 +4,7 @@
       <form method="post">
         {% csrf_token %}
         <p>
-          Are you sure you want to delete task "{{ object.name }}"?
+          Are you sure you want to delete task "{{ task.name }}"?
         </p>
         <input type="submit" value="Delete">
       </form>
