--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -9,7 +9,7 @@
 
     <h1>To do list</h1>
     {% block body %}
-    {% endblock %}
+    {% endblock body %}
     {% block form %}
     {% endblock form %}
 
