--- a/base/templates/base/task_create.html
+++ b/base/templates/base/task_create.html
@@ -1,6 +1,14 @@
 {% extends "base/base.html" %}
 
 {% block form %}
+    <h3>hello, {{ user }}</h3>
+    <div>
+    {% if request.user.is_authenticated %}
+        <a href="{% url "logout" %}">Logout</a>
+    {% else %}
+        <a href="{% url "login" %}">Login</a>
+    {% endif %}
+    </div>
   <a href="{% url 'categories' %}">Categories</a><br><br>
   <h4>CREATE A NEW TASK</h4>
   <div>
