--- a/base/templates/base/task_detail.html
+++ b/base/templates/base/task_detail.html
@@ -5,6 +5,6 @@
   <a href="{% url 'categories' %}">Categories</a>
   <h3>{{ object.name }}</h3>
   <pre>{{ object.description }}</pre><br>
-  To do: <br> * {{ object.to_do|date:'d.m Y' }}<br><br>
-  Dead line: <br> * {{ object.dead_line|date:'d.m Y' }}<br><br>
+  To do: <br> {{ object.to_do|date:'d.m Y' }}<br><br>
+  Dead line: <br> {{ object.dead_line|date:'d.m Y' }}<br><br>
 {% endblock body %}
