zmena admin site

--- a/base/templates/base/task_create.html
+++ b/base/templates/base/task_create.html
@@ -22,6 +22,13 @@
     <br><br>
   </div>
 
+{#  {% for task in all_tasks %}#}
+{#    Filter by: <pre>{{  }}</pre>#}
+{#  {% endfor %}#}
+{#  <br>#}
+{#  <br>#}
+
+
 {#      <table>#}
   {% for task in all_tasks %}
     <div>
