--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -11,6 +11,9 @@
         {{ form.as_p }}
         <input type="submit" value="Login">
     </form>
+    <div>
+        if you want register: <a href={% url "register" %}>register</a>
+    </div>
     </div>
 
 {% endblock body %}
