--- a/base/templates/base/categories.html
+++ b/base/templates/base/categories.html
@@ -2,7 +2,8 @@
 
 {% block body %}
   <a href="{% url "tasks" %}">Homepage</a><br><br>
-  <h3>CATEGORIES - Total tasks ({{ number_of_tasks }})</h3>
+  <h1>{{ user }}</h1>
+  <h3>CATEGORIES - Total tasks ({{ number_of_tasks}})<br><br></h3>
 
   <h4>Family ({{ family.count }})</h4>
   {% for task in family %}
