--- a/base/templates/base/list_by_categories.html
+++ b/base/templates/base/list_by_categories.html
@@ -1,6 +1,8 @@
 {% extends "base/base.html" %}
 
 {% block form %}
+    <a href="{% url "tasks" %}">Homepage</a><br>
+    <a href="{% url 'categories' %}">Categories</a><br><br>
     <h2>list of category: {{ name_of_category }}</h2>
     {% for task in object_list %}
     <p>{{ task.name }}</p>
