added timepicker and other

--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 
-    <h1>To do list</h1>
+    <h1>To do list - {{ user }}</h1>
     {% block body %}
     {% endblock body %}
     {% block form %}
