--- a/base/templates/base/task_detail.html
+++ b/base/templates/base/task_detail.html
@@ -5,8 +5,8 @@
   <a href="{% url 'categories' %}">Categories</a>
   <h3>{{ object.name }}</h3>
   <pre>{{ object.description }}</pre><br>
-  To do: <br> {{ object.to_do|date:'d.m Y' }}<br><br>
-  Dead line: <br> {{ object.dead_line|date:'d.m Y' }}<br><br>
+  To do: <br> {{ object.to_do|date:'d.m.Y' }}, {{ object.to_do_time|time:'H:i' }}<br><br>
+  Dead line: <br> {{ object.dead_line|date:'d.m.Y' }}, {{ object.dead_line_time|time:'H:i' }}<br><br>
     <a href="{% url "task_edit" task.id %}">Edit task</a><br>
     <a href="{% url "delete_task" task.id %}">delete</a>
 {% endblock body %}
