--- a/base/templates/base/task_create.html
+++ b/base/templates/base/task_create.html
@@ -1,7 +1,7 @@
 {% extends "base/base.html" %}
 
 {% block form %}
-  <h3>hello, {{ user }}</h3>
+  <h3>hello, {{ user }}. Today is {% now "jS F Y" %}</h3>
   <div>
     {% if request.user.is_authenticated %}
       <a href="{% url "logout" %}">Logout</a>
