--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -6,11 +6,18 @@
     <title>To do list</title>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
-
-    <h1>To do list - {{ user }}</h1>
+<div class="head">
+<span>BTC now: {{ btc_price }} USD</span>
+<span>{{ user }} |
+    {% if request.user.is_authenticated %}
+      <a href="{% url "logout" %}">Logout</a>
+    {% else %}
+      <a href="{% url "login" %}">Login</a>
+    {% endif %}</span>
+</div>
+    <h1>To do list</h1>
     {% block body %}
     {% endblock body %}
     {% block form %}
     {% endblock form %}
-
 </html>
