--- a/base/templates/base/task_create.html
+++ b/base/templates/base/task_create.html
@@ -2,21 +2,15 @@
 
 {% block form %}
   <h3>hello, {{ user }}. Today is {% now "jS F Y" %}</h3>
-  <div>
-    {% if request.user.is_authenticated %}
-      <a href="{% url "logout" %}">Logout</a>
-    {% else %}
-      <a href="{% url "login" %}">Login</a>
-    {% endif %}
-  </div>
+
   <a href="{% url 'categories' %}">Categories</a><br><br>
   <h4>CREATE A NEW TASK</h4>
   <div>
     <form action="{% url "tasks" %}" method="POST">
       {% csrf_token %}
-      <table>
-        {{ form.as_table }}
-      </table>
+
+        {{ form.as_p }}
+
       <input type="submit" value="Submit">
     </form>
     <br><br>
