--- a/base/templates/base/categories.html
+++ b/base/templates/base/categories.html
@@ -5,7 +5,7 @@
   <h3>CATEGORIES - Total tasks ({{ number_of_tasks}})<br><br></h3>
 
 
-  <h4><a class="discoloration" href={% url "list_by_categories" "family" %}>Family ({{ family.count }})</a></h4>
+  <h4><a class="nodiffcolor" href={% url "list_by_categories" "family" %}>Family ({{ family.count }})</a></h4>
   {% for task in family %}
       {% if task.completed %}
             <p><i><s>{{ task.name|slice:":25" }} - <a href="{% url 'task_detail' task.id %}">detail</a></s></i></p>
