--- a/base/templates/base/task_detail.html
+++ b/base/templates/base/task_detail.html
@@ -7,6 +7,7 @@
   <pre>{{ object.description }}</pre><br>
   To do: <br> {{ object.to_do|date:'d.m.Y' }}, {{ object.to_do_time|time:'H:i' }}<br><br>
   Dead line: <br> {{ object.dead_line|date:'d.m.Y' }}, {{ object.dead_line_time|time:'H:i' }}<br><br>
+  Category: <br> {{ object.category }}<br><br>
     <a href="{% url "task_edit" task.id %}">Edit task</a><br>
     <a href="{% url "delete_task" task.id %}">delete</a>
 {% endblock body %}
