--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -8,7 +8,7 @@
 </head>
 <div class="head">
 <span>BTC now: {{ btc_price }} USD</span>
-<span><b>{{ user }} |
+<span><b>{{ user }} -
     {% if request.user.is_authenticated %}
       <a href="{% url "logout" %}">Logout</a>
     {% else %}
