--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -8,6 +8,7 @@
 </head>
 <div class="head">
 <span>BTC now: {{ btc_price }} USD</span>
+<span>{% now "d.m.Y" %}</span>
 <span><b>{{ user }} -
     {% if request.user.is_authenticated %}
       <a href="{% url "logout" %}">Logout</a>
