--- a/base/templates/base/task_create.html
+++ b/base/templates/base/task_create.html
@@ -1,8 +1,7 @@
 {% extends "base/base.html" %}
 
 {% block form %}
-  <h3>hello, {{ user }}. Today is {% now "jS F Y" %}</h3>
-
+{#  <h3>hello, {{ user }}. Today is {% now "jS F Y" %}</h3>#}
   <a href="{% url 'categories' %}">Categories</a><br><br>
   <h4>CREATE A NEW TASK</h4>
   <div>
