--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -21,4 +21,7 @@
     {% endblock body %}
     {% block form %}
     {% endblock form %}
+<div>
+    <b>Do you want contribute? link on <a href="https://github.com/honzikhk/todo_list.git">Github</a></b>
+</div>
 </html>
