--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -22,6 +22,6 @@
     {% block form %}
     {% endblock form %}
 <div>
-    <b>Do you want contribute? link on <a href="https://github.com/honzikhk/todo_list.git">Github</a></b>
+  <br><b>Do you want contribute? link on <a href="https://github.com/honzikhk/todo_list.git">Github</a></b>
 </div>
 </html>
