--- a/base/templates/base/categories.html
+++ b/base/templates/base/categories.html
@@ -1,4 +1,4 @@
-{% include "base/base.html" %}
+{% extends "base/base.html" %}
 
 {% block body %}
   <a href="{% url "tasks" %}">Homepage</a><br><br>
